// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`$rootScope.googleMapsApiKey [ng-disabled] [ng-model] [ng-readonly] 1`] = `
"
  <div class=\\"bm-location\\">
    <bm-location-on-map coords=\\"$ctrl.coords\\" ng-disabled=\\"true\\" ng-readonly=\\"true\\" on-change=\\"$ctrl.onChange(value)\\" class=\\"ng-isolate-scope\\" readonly=\\"readonly\\" disabled=\\"disabled\\">
  <!-- ngIf: $ctrl.ngDisabled --><bm-static-location-on-map ng-if=\\"$ctrl.ngDisabled\\" coords=\\"$ctrl.coords\\" class=\\"ng-scope ng-isolate-scope\\">
  <figure class=\\"bm-location__map-container\\">
    <img class=\\"bm-location__map\\" ng-src=\\"https://maps.googleapis.com/maps/api/staticmap?key=secret&amp;scale=2&amp;size=300x300&amp;zoom=0&amp;center=0%2C0\\" alt=\\"map of unspecified location\\" height=\\"300\\" width=\\"300\\" src=\\"https://maps.googleapis.com/maps/api/staticmap?key=secret&amp;scale=2&amp;size=300x300&amp;zoom=0&amp;center=0%2C0\\">
  </figure>
</bm-static-location-on-map><!-- end ngIf: $ctrl.ngDisabled -->
  <!-- ngIf: !$ctrl.ngDisabled -->
</bm-location-on-map>

    <!-- ngIf: !$ctrl.ngDisabled && !$ctrl.ngReadonly -->
  </div>
"
`;

exports[`$rootScope.googleMapsApiKey [ng-disabled] [ng-model] 1`] = `
"
  <div class=\\"bm-location\\">
    <bm-location-on-map coords=\\"$ctrl.coords\\" ng-disabled=\\"true\\" ng-readonly=\\"false\\" on-change=\\"$ctrl.onChange(value)\\" class=\\"ng-isolate-scope\\" disabled=\\"disabled\\">
  <!-- ngIf: $ctrl.ngDisabled --><bm-static-location-on-map ng-if=\\"$ctrl.ngDisabled\\" coords=\\"$ctrl.coords\\" class=\\"ng-scope ng-isolate-scope\\">
  <figure class=\\"bm-location__map-container\\">
    <img class=\\"bm-location__map\\" ng-src=\\"https://maps.googleapis.com/maps/api/staticmap?key=secret&amp;scale=2&amp;size=300x300&amp;zoom=0&amp;center=0%2C0\\" alt=\\"map of unspecified location\\" height=\\"300\\" width=\\"300\\" src=\\"https://maps.googleapis.com/maps/api/staticmap?key=secret&amp;scale=2&amp;size=300x300&amp;zoom=0&amp;center=0%2C0\\">
  </figure>
</bm-static-location-on-map><!-- end ngIf: $ctrl.ngDisabled -->
  <!-- ngIf: !$ctrl.ngDisabled -->
</bm-location-on-map>

    <!-- ngIf: !$ctrl.ngDisabled && !$ctrl.ngReadonly -->
  </div>
"
`;

exports[`$rootScope.googleMapsApiKey [ng-model] [ng-readonly] 1`] = `
"
  <div class=\\"bm-location\\">
    <bm-location-on-map coords=\\"$ctrl.coords\\" ng-disabled=\\"true\\" ng-readonly=\\"true\\" on-change=\\"$ctrl.onChange(value)\\" class=\\"ng-isolate-scope\\" readonly=\\"readonly\\" disabled=\\"disabled\\">
  <!-- ngIf: $ctrl.ngDisabled --><bm-static-location-on-map ng-if=\\"$ctrl.ngDisabled\\" coords=\\"$ctrl.coords\\" class=\\"ng-scope ng-isolate-scope\\">
  <figure class=\\"bm-location__map-container\\">
    <img class=\\"bm-location__map\\" ng-src=\\"https://maps.googleapis.com/maps/api/staticmap?key=secret&amp;scale=2&amp;size=300x300&amp;zoom=0&amp;center=0%2C0\\" alt=\\"map of unspecified location\\" height=\\"300\\" width=\\"300\\" src=\\"https://maps.googleapis.com/maps/api/staticmap?key=secret&amp;scale=2&amp;size=300x300&amp;zoom=0&amp;center=0%2C0\\">
  </figure>
</bm-static-location-on-map><!-- end ngIf: $ctrl.ngDisabled -->
  <!-- ngIf: !$ctrl.ngDisabled -->
</bm-location-on-map>

    <!-- ngIf: !$ctrl.ngDisabled && !$ctrl.ngReadonly -->
  </div>
"
`;

exports[`$rootScope.googleMapsApiKey [ng-model] 1`] = `
"
  <div class=\\"bm-location\\">
    <bm-location-on-map coords=\\"$ctrl.coords\\" ng-disabled=\\"true\\" ng-readonly=\\"false\\" on-change=\\"$ctrl.onChange(value)\\" class=\\"ng-isolate-scope\\" disabled=\\"disabled\\">
  <!-- ngIf: $ctrl.ngDisabled --><bm-static-location-on-map ng-if=\\"$ctrl.ngDisabled\\" coords=\\"$ctrl.coords\\" class=\\"ng-scope ng-isolate-scope\\">
  <figure class=\\"bm-location__map-container\\">
    <img class=\\"bm-location__map\\" ng-src=\\"https://maps.googleapis.com/maps/api/staticmap?key=secret&amp;scale=2&amp;size=300x300&amp;zoom=0&amp;center=0%2C0\\" alt=\\"map of unspecified location\\" height=\\"300\\" width=\\"300\\" src=\\"https://maps.googleapis.com/maps/api/staticmap?key=secret&amp;scale=2&amp;size=300x300&amp;zoom=0&amp;center=0%2C0\\">
  </figure>
</bm-static-location-on-map><!-- end ngIf: $ctrl.ngDisabled -->
  <!-- ngIf: !$ctrl.ngDisabled -->
</bm-location-on-map>

    <!-- ngIf: !$ctrl.ngDisabled && !$ctrl.ngReadonly --><div class=\\"bm-location__button-container ng-scope\\" ng-if=\\"!$ctrl.ngDisabled &amp;&amp; !$ctrl.ngReadonly\\">

      <!-- ngIf: $ctrl.isEditing -->
      <!-- ngIf: $ctrl.isEditing -->
      <!-- ngIf: $ctrl.isEditing -->

      <!-- ngIf: !$ctrl.isEditing --><button type=\\"button\\" class=\\"bm-location__button bm-location__button-clear ng-scope\\" ng-if=\\"!$ctrl.isEditing\\" ng-click=\\"$ctrl.onClear()\\">Clear</button><!-- end ngIf: !$ctrl.isEditing -->
      <!-- ngIf: !$ctrl.isEditing --><button type=\\"button\\" class=\\"bm-location__button bm-location__button-edit ng-scope\\" ng-if=\\"!$ctrl.isEditing\\" ng-click=\\"$ctrl.onEdit()\\">Edit
      </button><!-- end ngIf: !$ctrl.isEditing -->

    </div><!-- end ngIf: !$ctrl.ngDisabled && !$ctrl.ngReadonly -->
  </div>
"
`;
